update reservation